<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvInfo"
            style="@style/item_info_dialog_item"
            android:text="@string/item_options_info" />

        <TextView
            android:id="@+id/tvRemove"
            style="@style/item_info_dialog_item"
            android:text="@string/item_options_remove" />

        <TextView
            android:id="@+id/tvEdit"
            style="@style/item_info_dialog_item"
            android:text="@string/item_options_edit"
            android:visibility="gone" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>